--- a/src/scss/components/header/index.scss
+++ b/src/scss/components/header/index.scss
@@ -1,4 +1,5 @@
-// Import biến ở file variable - để chúng ta sử dụng.
+// Import biến ở file variable để chúng ta sử dụng.
+//  as * import vào và sử dụng đúng tên biến.
 @use "../../base/variable" as *; // nhớ có as *;
 
 .header {
@@ -14,6 +15,7 @@
   h1 {
     font-size: 2.6rem;
     font-weight: 600;
+    color: $clr-primary;
   }
 
   // Lồng nhiều nhất 3 cấp.
