--- a/src/scss/base/reset.scss
+++ b/src/scss/base/reset.scss
@@ -89,7 +89,7 @@ video {
   padding: 0;
   border: 0;
   font-size: 100%;
-  font: inherit;
+  // font: inherit;
   vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
@@ -155,4 +155,5 @@ body {
   font-style: normal;
 
   font-size: 1.6rem;
+  line-height: 1.3;
 }
