--- a/src/scss/components/header/index.scss
+++ b/src/scss/components/header/index.scss
@@ -3,14 +3,22 @@
 @use "../../base/variable" as *; // nhớ có as *;
 
 .header {
-  height: 9rem;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 9999;
+  width: 100%;
+  background-color: white;
+
   display: flex;
   align-items: center;
   justify-content: space-between;
 
-  box-shadow: 0 2px 4px #e2ebfc;
+  height: $h-header;
   padding-left: 3rem;
   padding-right: 3rem;
+
+  box-shadow: 0 2px 4px #e2ebfc;
 
   h1 {
     font-size: 2.6rem;
