--- a/src/scss/components/header/index.scss
+++ b/src/scss/components/header/index.scss
@@ -2,6 +2,8 @@
 //  as * import vào và sử dụng đúng tên biến.
 @use "../../base/variable" as *; // nhớ có as *;
 
+@use "../../helper" as *;
+
 .header {
   position: fixed;
   top: 0;
@@ -32,8 +34,22 @@
       // Cách tạo biến: $<ten_bien>
       $padding: 2.5rem;
 
-      padding-left: $padding;
-      padding-right: $padding;
+      // Tạo biến trong css: --[Ten_Bien]
+      --padding: 2.5rem;
+
+      // padding-left: $padding;
+      // padding-right: $padding;
+
+      // Cách sử dụng biến css
+      padding-left: var(--padding);
+      padding-right: var(--padding);
+
+      @include responsive("lg") {
+        // padding-left: 0.8rem;
+        // padding-right: 0.8rem;
+
+        --padding: 0.8rem;
+      }
     }
 
     .nav-link {
@@ -72,6 +88,49 @@
       align-items: center;
       justify-content: center;
       gap: 1rem;
+    }
+  }
+
+  .btn-menu,
+  .small-menu {
+    display: none;
+  }
+
+  @include responsive("sm") {
+    .navigation {
+      display: none;
+    }
+    .btn-menu {
+      display: block;
+    }
+
+    .small-menu.active {
+      display: block;
+    }
+    .small-menu {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      background-color: wheat;
+      height: 100vh;
+      padding: 2rem 4rem;
+      font-size: 2rem;
+
+      ul {
+        display: flex;
+        flex-direction: column;
+        gap: 2rem;
+      }
+
+      .close {
+        position: absolute;
+        top: 1rem;
+        right: 1rem;
+        font-size: 3rem;
+        background-color: transparent;
+        border: none;
+      }
     }
   }
 }
